chore: rename classes from `polars_sql_...` to `polarssql_...`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,9 +15,9 @@ export(dbWithTransaction)
 export(polarssql)
 export(polarssql_register)
 export(polarssql_unregister)
-exportClasses(polars_sql_connection)
-exportClasses(polars_sql_driver)
-exportClasses(polars_sql_result)
+exportClasses(polarssql_connection)
+exportClasses(polarssql_driver)
+exportClasses(polarssql_result)
 exportMethods(dbClearResult)
 exportMethods(dbConnect)
 exportMethods(dbDisconnect)
