feat: implement more DBI methods

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,11 +27,17 @@ Collate:
     'dbClearResult_Result.R'
     'dbConnect_Driver.R'
     'dbDisconnect_Connectsion.R'
+    'dbExistsTable_Connection_character.R'
     'dbFetch_Result.R'
     'dbHasCompleted_Result.R'
     'dbIsValid_Connection.R'
     'dbIsValid_Driver.R'
     'dbIsValid_Result.R'
+    'dbListFields_Connection_character.R'
+    'dbListTables_Connection.R'
+    'dbQuoteIdentifier_Connection_character.R'
+    'dbQuoteString_Connection_character.R'
+    'dbRemoveTable_Connection_character.R'
     'dbSendQuery_Connection_character.R'
     'dbWriteTable_Connection_character.R'
     'register.R'
