--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,15 @@ exportClasses(polarssql_result)
 exportMethods(dbClearResult)
 exportMethods(dbConnect)
 exportMethods(dbDisconnect)
+exportMethods(dbExistsTable)
 exportMethods(dbFetch)
 exportMethods(dbHasCompleted)
 exportMethods(dbIsValid)
+exportMethods(dbListFields)
+exportMethods(dbListTables)
+exportMethods(dbQuoteIdentifier)
+exportMethods(dbQuoteString)
+exportMethods(dbRemoveTable)
 exportMethods(dbSendQuery)
 exportMethods(dbWriteTable)
 exportMethods(show)
