--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(dbReadTable)
 export(dbUnquoteIdentifier)
 export(dbWithTransaction)
 export(polarssql)
+export(polarssql_default_connection)
+export(polarssql_query)
 export(polarssql_register)
 export(polarssql_unregister)
 exportClasses(polarssql_connection)
