--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ exportMethods(dbConnect)
 exportMethods(dbDisconnect)
 exportMethods(dbExistsTable)
 exportMethods(dbFetch)
+exportMethods(dbGetRowsAffected)
 exportMethods(dbHasCompleted)
 exportMethods(dbIsValid)
 exportMethods(dbListFields)
