fix: fix `tbl_polarssql` to using cache

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,7 +44,13 @@ importFrom(polars,pl)
 importFrom(rlang,"!!!")
 importFrom(rlang,":=")
 importFrom(rlang,abort)
+importFrom(rlang,env_get)
+importFrom(rlang,env_has)
+importFrom(rlang,env_poke)
 importFrom(rlang,exec)
+importFrom(rlang,is_attached)
 importFrom(rlang,is_installed)
 importFrom(rlang,list2)
+importFrom(rlang,new_environment)
+importFrom(rlang,search_env)
 importFrom(rlang,syms)
