--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -31,6 +31,7 @@ tasks:
     deps:
       - build-documents
     cmds:
+      - task: test-all
       - task: build-readme
 
   build-documents:
@@ -58,3 +59,16 @@ tasks:
       - Rscript -e
         'devtools::load_all();
         rmarkdown::render(input = "README.Rmd", output_file = "README.md")'
+
+  test-all:
+    desc: Run all tests.
+    cmds:
+      - task: test-examples
+
+  test-examples:
+    desc: Check if examples can be run.
+    internal: true
+    sources:
+      - "{{.R_SOURCE}}"
+    cmds:
+      - Rscript -e 'devtools::load_all(); devtools::run_examples(document = FALSE)'
