fix: update Result to release the polars DataFrame and fix the dbIsValid function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ exportMethods(dbWriteTable)
 exportMethods(show)
 import(DBI)
 import(methods)
+importFrom(polars,.pr)
 importFrom(polars,as_polars_df)
 importFrom(polars,as_polars_lf)
 importFrom(polars,pl)
