wip arrow methods

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,12 +29,12 @@ Collate:
     'polarssql-package.R'
     'Driver.R'
     'Connection.R'
-    'Result.R'
-    'dbClearResult_Result.R'
+    'Result-ResultArrow.R'
+    'dbClearResult_Result-ResultArrow.R'
     'dbConnect_Driver.R'
     'dbDisconnect_Connectsion.R'
     'dbExistsTable_Connection_character.R'
-    'dbFetch_Result.R'
+    'dbFetch_Result-dbFetchArrow_ResultArrow.R'
     'dbGetRowsAffected_Result.R'
     'dbHasCompleted_Result.R'
     'dbIsValid_Connection.R'
