--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(tbl_polarssql)
 exportClasses(polarssql_connection)
 exportClasses(polarssql_driver)
 exportClasses(polarssql_result)
+exportClasses(polarssql_result_arrow)
 exportMethods(dbClearResult)
 exportMethods(dbConnect)
 exportMethods(dbDisconnect)
