docs: update roxygen notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as_polars_df,tbl_polarssql_connection)
 S3method(as_polars_lf,tbl_polarssql_connection)
+S3method(print,tbl_polarssql_connection)
 export(Id)
 export(dbAppendTable)
 export(dbCanConnect)
@@ -42,6 +43,18 @@ exportMethods(dbWriteTable)
 exportMethods(show)
 import(DBI)
 import(methods)
+importFrom(DBI,Id)
+importFrom(DBI,dbAppendTable)
+importFrom(DBI,dbCanConnect)
+importFrom(DBI,dbCreateTable)
+importFrom(DBI,dbExecute)
+importFrom(DBI,dbGetQuery)
+importFrom(DBI,dbIsReadOnly)
+importFrom(DBI,dbListObjects)
+importFrom(DBI,dbQuoteLiteral)
+importFrom(DBI,dbReadTable)
+importFrom(DBI,dbUnquoteIdentifier)
+importFrom(DBI,dbWithTransaction)
 importFrom(polars,.pr)
 importFrom(polars,as_polars_df)
 importFrom(polars,as_polars_lf)
