--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,13 +9,13 @@ URL: https://rpolars.github.io/r-polarssql/, https://github.com/rpolars/r-polars
 BugReports: https://github.com/rpolars/r-polarssql/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Depends:
     R (>= 4.2)
 Imports:
     DBI (>= 1.2.1),
     methods,
-    polars (>= 0.13.0),
+    polars0 (>= 1.0.0),
     rlang
 Suggests:
     dplyr,
