--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,10 +56,10 @@ importFrom(DBI,dbQuoteLiteral)
 importFrom(DBI,dbReadTable)
 importFrom(DBI,dbUnquoteIdentifier)
 importFrom(DBI,dbWithTransaction)
-importFrom(polars,.pr)
-importFrom(polars,as_polars_df)
-importFrom(polars,as_polars_lf)
-importFrom(polars,pl)
+importFrom(polars0,.pr)
+importFrom(polars0,as_polars_df)
+importFrom(polars0,as_polars_lf)
+importFrom(polars0,pl)
 importFrom(rlang,"!!!")
 importFrom(rlang,":=")
 importFrom(rlang,abort)
