chore: switch from polras0 to polars

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Depends:
 Imports:
     DBI (>= 1.2.1),
     methods,
-    polars0 (>= 1.0.0),
+    polars (>= 1.0.0),
     rlang
 Suggests:
     dplyr,
