feat: adopt to polars 1.0.0

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Suggests:
     nanoarrow,
     patrick,
     testthat (>= 3.0.0),
+    tibble,
     DBItest (>= 1.7.3)
 Config/testthat/edition: 3
 Collate:
