--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(as.data.frame,tbl_polarssql_connection)
 S3method(as_polars_df,tbl_polarssql_connection)
 S3method(as_polars_lf,tbl_polarssql_connection)
-S3method(print,tbl_polarssql_connection)
 export(Id)
 export(dbAppendTable)
 export(dbCanConnect)
@@ -44,6 +43,7 @@ exportMethods(dbWriteTable)
 exportMethods(show)
 import(DBI)
 import(methods)
+import(rlang)
 importFrom(DBI,Id)
 importFrom(DBI,dbAppendTable)
 importFrom(DBI,dbCanConnect)
@@ -56,20 +56,6 @@ importFrom(DBI,dbQuoteLiteral)
 importFrom(DBI,dbReadTable)
 importFrom(DBI,dbUnquoteIdentifier)
 importFrom(DBI,dbWithTransaction)
-importFrom(polars0,.pr)
-importFrom(polars0,as_polars_df)
-importFrom(polars0,as_polars_lf)
-importFrom(polars0,pl)
-importFrom(rlang,"!!!")
-importFrom(rlang,":=")
-importFrom(rlang,abort)
-importFrom(rlang,env_get)
-importFrom(rlang,env_has)
-importFrom(rlang,env_poke)
-importFrom(rlang,exec)
-importFrom(rlang,is_attached)
-importFrom(rlang,is_installed)
-importFrom(rlang,list2)
-importFrom(rlang,new_environment)
-importFrom(rlang,search_env)
-importFrom(rlang,syms)
+importFrom(polars,as_polars_df)
+importFrom(polars,as_polars_lf)
+importFrom(polars,pl)
